sumo/tests/sumo/output/vtypeprobe/errors/freq_false/errors.sumo
Error: Attribute 'freq' in definition of vtypeprobe 'test1' is not an int.
Quitting (on error).
